# AudioLibrary

./: .gitignore  CMakeLists.txt  README.md
design/: OOPModel.dia
examples/VuMeter/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  vumeter.cpp  vumeter.h
include/: iaudiodevice.h  iaudioplayer.h  iaudiosample.h  iaudiotrack.h  sampleinfo.h
include/sdl/: audioloadersdl.h  audioplayersdl.h  audiosamplesdl.h
include/zaudio/: exception.h  iaudioplayer.h  iaudiosample.h  iaudiosampler.h  isampler.h
include/zaudio/sdl/: audioloadersdl.h  audioplayersdl.h  audiosamplersdl.h  audiosamplesdl.h
src/: main.cpp
src/sdl/: audioloader.cpp  audioplayersdl.cpp  audiosamplersdl.cpp  audiosamplesdl.cpp
